--- a/line-of-sight-software-app-mk2/cdbb-db/src/test/resources/application.yaml
+++ b/line-of-sight-software-app-mk2/cdbb-db/src/test/resources/application.yaml
@@ -5,10 +5,18 @@ logging:
                 SQL: debug
 
 spring:
+    datasource:
+        url: jdbc:mariadb://127.0.0.1:3306/cdbb?allowMultiQueries=true
+        username: cdbb
+        password: cdbbpw
+        driver-class-name: org.mariadb.jdbc.Driver
     jpa:
+        hibernate:
+            ddl-auto:create
         show-sql: true
-    h2:
-        console:
-            enabled: true
+        properties.hibernate.enable_lazy_load_no_trans: true
+        sql:
+            init:
+                mode=never:
     liquibase:
         change-log: 'classpath:database/liquibase-changelog.yaml'
