--- a/line-of-sight-software-app-mk2/cdbb-db/pom.xml
+++ b/line-of-sight-software-app-mk2/cdbb-db/pom.xml
@@ -32,9 +32,9 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.5</version>
         </dependency>
     </dependencies>
 
